--- a/Home/HomeStyle.css
+++ b/Home/HomeStyle.css
@@ -125,24 +125,25 @@ header {
     gap: 1.5rem;
 }
 
-.home-img{
+.home-img {
     height: 515px;
     width: 645px;
     position: absolute;
-    top: 225px;
+    top: 125px;
     right: 70px;
-    z-index: 0;
+    z-index: 1;
+    /* Nilai z-index yang lebih tinggi dari .BgHome */
 }
 
-.shape{
-    background-color: var(--main-color);
-    width: 391px;
-    height: 634px;
-    margin-left: 70px;
+.BgHome {
     position: absolute;
-    top: 0;
+    top: 3.5rem;
     right: 0;
+    height: 100vh;
+    width: 100vw;
     z-index: 0;
+    /* Nilai z-index yang lebih rendah dari .home-img */
+    /* tambahkan properti lain yang diperlukan */
 }
 
 .home-GreenTea{
@@ -155,16 +156,22 @@ header {
 }
 
 .home-text h1{
-    font-size: 3.4rem;
+    font-size: 5rem;
     color: var(--main-color);
     text-transform: uppercase;
 }
 
-.home-text span{
-    font-size: 3.4rem;
+/* .home-text span{
+    font-size: 5rem;
     color: var(--button-color);
     text-transform: uppercase;
     letter-spacing: 2px;
+} */
+
+#Beckons{
+    font-size: 5rem;
+    color: var(--button-color);
+    text-transform: uppercase;
 }
 
 .home-text p{
@@ -172,7 +179,7 @@ header {
     color: black;
     margin: 0.5rem 0 1.4rem;
     font-family: inter;
-    max-width: calc(100% - 524px); /* Ukuran gambar + padding yang diberikan (474px + 50px padding kiri) */
+    max-width: calc(100% - 724px); /* Ukuran gambar + padding yang diberikan (474px + 50px padding kiri) */
     margin-right: 24px; /* Memberikan jarak dari tepi gambar */
     text-align: justify; /* Menjadikan teks menjadi justify content */
 }
@@ -400,6 +407,19 @@ header {
     margin: 0 0 1.4rem;
 }
 
+.Bintang{
+    place-items: center;
+    margin-top: -2rem;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding-left: 8rem;
+}
+
+/* Bintang */
+.checked {
+    color: orange;
+}
 /* Styles for showSlide_spill */
 .showSlide_spill {
     display: flex;
@@ -463,7 +483,7 @@ header {
 .card-body h6{
     font-family: 'inter',sans-serif;
     font-size: 15px;
-    margin-left: 130px;
+    margin-left: 160px;
     margin-top: 10px;
 }
 
@@ -492,23 +512,31 @@ header {
 }
 
 /* Festival */
-.festival{
+.festival {
     height: 430px;
-    background-color: #ffffff;
     margin-top: 100px;
-    box-shadow: 8px 0 8px 0 rgba(0,0,0,0.7);
+}
+
+.textFestival {
+    float: right;
+    width: 40rem;
+    height: 20rem;
+    margin-right: 2rem;
+    margin-top: -26rem;
 }
 
 .festival img {
     width: 474px;
     height: 505px;
-    position: absolute;
-    margin-left: 775px;
+    position: relative;
+    left: -70px;
+    top: 0;
+    margin-left: 10px;
     margin-top: -90px;
     border-radius: 5px 0 0 5px;
 }
 
-.festival h3{
+.textFestival h3{
     font-family: inter;
     font-style: initial;
     font-size: 30px;
@@ -518,7 +546,7 @@ header {
 
 }
 
-.festival h5{
+.textFestival h5{
     font-family: 'inter', sans-serif;
     font-style: initial;
     font-size: 15px;
@@ -527,13 +555,13 @@ header {
     color: var(--button-color);    
 }
 
-.festival p {
+.textFestival p {
     font-family: 'inter', sans-serif;
     font-style: initial;
     font-size: 15px;
     /* padding-top: 10px;
     padding-left: 55px; */
-    max-width: calc(100% - 524px); /* Ukuran gambar + padding yang diberikan (474px + 50px padding kiri) */
+    max-width: calc(100% -0px); /* Ukuran gambar + padding yang diberikan (474px + 50px padding kiri) */
     margin-right: 24px; /* Memberikan jarak dari tepi gambar */
     text-align: justify; /* Menjadikan teks menjadi justify content */
 }
@@ -951,7 +979,7 @@ header {
     }
     
     .slide img {
-        max-width: 33.33%; 
+        max-width: 30rem; 
     }
     
     .dots {
@@ -979,6 +1007,63 @@ header {
     .spill {
         grid-template-columns: repeat(auto-fit, minmax(50%, auto));
      }
+     .festival img {
+        width: 374px;
+        height: 355px;
+        position: relative;
+        margin-left: 500px;
+        margin-top: -65px;
+        border-radius: 5px 0 0 5px;
+    }
+     /* Festival */
+     .festival {
+        height: 330px;
+        background-color: #ffffff;
+        margin-top: 100px;
+        box-shadow: 3px 0 3px 0 rgba(0, 0, 0, 0.2);
+        position: relative; /* Add position relative to the container */
+    }
+    
+    .festival img {
+        width: 374px;
+        height: 355px;
+        position: relative;
+        margin-left: 500px;
+        margin-top: -65px;
+        border-radius: 5px 0 0 5px;
+    }
+    
+    .festival h3 {
+        font-family: 'inter';
+        font-style: initial;
+        font-size: 30px;
+        color: var(--main-color);
+        position: absolute; /* Change to absolute positioning */
+        top: 10px; 
+        left: 2rem; 
+    }
+    
+    .festival h5 {
+        font-family: 'inter', sans-serif;
+        font-style: initial;
+        font-size: 15px;
+        position: absolute; /* Change to absolute positioning */
+        top: 50px;
+        left: 2rem; 
+        color: var(--button-color);
+    }
+    
+    .festival p {
+        font-family: 'inter', sans-serif;
+        font-style: initial;
+        font-size: 13px;
+        position: relative; /* Change to absolute positioning */
+        top: -17rem; 
+        left: -4rem; 
+        max-width: calc(100% - 224px);
+        margin-right: 24px;
+        text-align: justify;
+    }
 
 }
 
