--- a/Home/HomeStyle.css
+++ b/Home/HomeStyle.css
@@ -53,55 +53,65 @@ header {
     width: 90px;
 }
 
-/* Navbar */
-
 .navbar {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     list-style: none;
     margin: 0;
     padding: 0;
-    flex-grow: 1; 
+    flex-grow: 1;
 }
 
 .navbar a {
-    padding: 8px 15px;
+    padding: 8px 20px;
     color: var(--second-color);
     font-size: 1rem;
     text-transform: uppercase;
     font-weight: 500;
     font-family: 'inter', sans-serif;
     font-weight: bold;
-    margin: 0 10px;
+    margin: 0 15px;
+    /* Increase the right margin to add more spacing */
+    position: relative;
+    /* tambahkan properti ini */
 }
 
 .navbar a:hover {
-    background: var(--main-color);
-    color: #FFFF;
-    border-radius: 0.2rem;
-    transition: 0.2s all linear; /* Add "s" to specify seconds */
+    transition: 0.2s all linear;
+    background-size: auto;
+    border-bottom: 2px solid var(--button-color);
+    color: var(--button-color);
 }
 
-.active_nav{
-    background: var(--main-color);
-    color: #FFFF;
-    border-radius: 0.2rem;
-    transition: 0.2 all linear;
+.active_nav {
+    transition: 0.2s all linear;
     background-size: auto;
-
+    border-bottom: 2px solid var(--button-color);
     font-size: 1rem;
     text-transform: uppercase;
     font-weight: 500;
     font-family: 'inter', sans-serif;
-    font-weight: bold; 
+    font-weight: bold;
     padding: 8px 2px;
 }
 
-.active_nav a{
-    color: #ffffff;
+.active_nav a {
+    color: var(--button-color);
+    position: relative;
+    /* tambahkan properti ini */
 }
 
+.active_nav a:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -2px;
+    /* mengatur jarak border-bottom dengan konten atau text */
+    height: 2px;
+    background-color: var(--button-color);
+}
 #menu-icon {
     color: var(--second-color);
     font-size: 24px;
@@ -139,8 +149,8 @@ header {
     position: absolute;
     top: 3.5rem;
     right: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 60vh;
+    width: 58vw;
     z-index: 0;
     /* Nilai z-index yang lebih rendah dari .home-img */
     /* tambahkan properti lain yang diperlukan */
@@ -160,13 +170,6 @@ header {
     color: var(--main-color);
     text-transform: uppercase;
 }
-
-/* .home-text span{
-    font-size: 5rem;
-    color: var(--button-color);
-    text-transform: uppercase;
-    letter-spacing: 2px;
-} */
 
 #Beckons{
     font-size: 5rem;
@@ -386,7 +389,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, auto));
+    /* grid-template-columns: repeat(auto-fit, minmax(25rem, auto)); */
     align-items: center;
     gap: 1.5rem;
 }
@@ -439,7 +442,7 @@ header {
 
 .card-spill {
     display: flex;
-    gap: 1rem;
+    gap: 3rem;
 }
 
 .text-card{
@@ -459,6 +462,7 @@ header {
     font-family: 'inter', sans-serif;
     font-size: 12px;
     text-align: center; 
+    padding: 1rem;
 }
 
 .card-body{
@@ -468,7 +472,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    grid-template-columns: repeat(auto-fit,minmax(17rem,auto));
+    /* grid-template-columns: repeat(auto-fit,minmax(17rem,auto)); */
     align-items: center;
     gap: 1.5rem;
 }
@@ -651,6 +655,7 @@ header {
     left: -100px;
     margin-top: -460px;
     flex-direction: column; /* Stack buttons vertically */
+    background-color: #95E8FF;
 }
 
 .box {
@@ -873,378 +878,5 @@ header {
 
 /* Media queries untuk responsif */
 
-@media screen and (max-width: 968px) and (min-width:769px) {
-    header {
-        height: auto;
-    }
-
-    header {
-        position: fixed;
-        width: 100%;
-        height: 59px;
-        top: 0;
-        right: 0;
-        z-index: 1000;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 35px 0.9rem;
-        background-color: #ffffff;
-    }
-
-    .logo{
-        bottom: 20rem;
-    }
-
-    .grid-container{
-        display: none;
-    }
-
-    
-/* Home */
-.home{
-    width: 100%;
-    min-height: 80vh;
-}
-
-.home-img{
-    height: 515px;
-    width: 545px;
-    position: absolute;
-    top: 255px;
-    right: 4rem;
-    z-index: 0;
-}
-
-.shape{
-    width: 291px;
-    height: 634px;
-    margin-left: 70px;
-}
-
-.home-text p{
-    max-width: calc(100% - 324px); /* Ukuran gambar + padding yang diberikan (474px + 50px padding kiri) */
-
-}
-
-    /* Best Products */
-
-    .text-best{
-        display: none;
-      }
-
-    .best{
-        width: 100%;
-        min-height: 100vh;
-        background: var(--bg-color);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        grid-template-columns: repeat(auto-fit,minmax(17rem,auto));
-        align-items: center;
-        gap: 1.5rem;
-        display: contents;
-    }
-    
-    .best-text {
-        display: grid;
-        place-items: center;
-        text-align: center;
-        height: 100%;
-    }
-    
-    .best-text h2{
-        color: var(--main-color);
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        font-size: 2rem;
-        margin: 10rem 0 1.4rem;
-    }
-    
-    /* Styles for slideshow */
-    .slideshow {
-        display: flex;
-        overflow: hidden;
-        width: 100%;
-    }
-    
-    .slide {
-        display: none;
-        width: 100%; 
-    }
-    
-    .slide.active {
-        display: flex; 
-        justify-content: center; 
-    }
-    
-    .slide img {
-        max-width: 30rem; 
-    }
-    
-    .dots {
-        position: relative;
-        bottom: 10px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        margin: 3rem 0 1.4rem;
-    }
-    
-    .dot {
-        height: 10px;
-        width: 10px;
-        margin: 0 5px;
-        border-radius: 50%;
-        background-color: #888;
-        cursor: pointer;
-    }
-    
-    .active-dot {
-        background-color: var(--button-color);
-    }
-
-    .spill {
-        grid-template-columns: repeat(auto-fit, minmax(50%, auto));
-     }
-     .festival img {
-        width: 374px;
-        height: 355px;
-        position: relative;
-        margin-left: 500px;
-        margin-top: -65px;
-        border-radius: 5px 0 0 5px;
-    }
-     /* Festival */
-     .festival {
-        height: 330px;
-        background-color: #ffffff;
-        margin-top: 100px;
-        box-shadow: 3px 0 3px 0 rgba(0, 0, 0, 0.2);
-        position: relative; /* Add position relative to the container */
-    }
-    
-    .festival img {
-        width: 374px;
-        height: 355px;
-        position: relative;
-        margin-left: 500px;
-        margin-top: -65px;
-        border-radius: 5px 0 0 5px;
-    }
-    
-    .festival h3 {
-        font-family: 'inter';
-        font-style: initial;
-        font-size: 30px;
-        color: var(--main-color);
-        position: absolute; /* Change to absolute positioning */
-        top: 10px; 
-        left: 2rem; 
-    }
-    
-    .festival h5 {
-        font-family: 'inter', sans-serif;
-        font-style: initial;
-        font-size: 15px;
-        position: absolute; /* Change to absolute positioning */
-        top: 50px;
-        left: 2rem; 
-        color: var(--button-color);
-    }
-    
-    .festival p {
-        font-family: 'inter', sans-serif;
-        font-style: initial;
-        font-size: 13px;
-        position: relative; /* Change to absolute positioning */
-        top: -17rem; 
-        left: -4rem; 
-        max-width: calc(100% - 224px);
-        margin-right: 24px;
-        text-align: justify;
-    }
-
-}
-
-@media screen and (max-width: 768px) and (min-width:700px) {
-    header {
-        height: auto;
-    }
-
-    header {
-        position: fixed;
-        width: 100%;
-        height: 59px;
-        top: 0;
-        right: 0;
-        z-index: 1000;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 35px 0.9rem;
-        background-color: #ffffff;
-    }
-
-    .navbar{
-        display: none;
-    }
-
-    #menu-icon {
-        color: var(--second-color);
-        cursor: pointer;
-        display: flex;
-        margin: 0 0 0 29rem;
-        padding: 0;
-        flex-grow: 1;
-        height: 20px;
-    }
-
-    .logo{
-        bottom: 20rem;
-    }
-
-    .grid-container{
-        display: none;
-    }
-
-    /* Best Products */
-
-    .text-best{
-        display: none;
-      }
-
-    .best{
-        width: 100%;
-        min-height: 100vh;
-        background: var(--bg-color);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        grid-template-columns: repeat(auto-fit,minmax(17rem,auto));
-        align-items: center;
-        gap: 1.5rem;
-        display: contents;
-    }
-    
-    .best-text {
-        display: grid;
-        place-items: center;
-        text-align: center;
-        height: 100%;
-    }
-    
-    .best-text h2{
-        color: var(--main-color);
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        font-size: 2rem;
-        margin: 10rem 0 1.4rem;
-    }
-    
-    /* Styles for slideshow */
-    .slideshow {
-        display: flex;
-        overflow: hidden;
-        width: 100%;
-    }
-    
-    .slide {
-        display: none;
-        width: 100%; 
-    }
-    
-    .slide.active {
-        display: flex; 
-        justify-content: center; 
-    }
-    
-    .slide img {
-        max-width: 33.33%; 
-    }
-    
-    .dots {
-        position: relative;
-        bottom: 10px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        margin: 3rem 0 1.4rem;
-    }
-    
-    .dot {
-        height: 10px;
-        width: 10px;
-        margin: 0 5px;
-        border-radius: 50%;
-        background-color: #888;
-        cursor: pointer;
-    }
-    
-    .active-dot {
-        background-color: var(--button-color);
-    }
-
-/* Home */
-.home{
-    width: 100%;
-    min-height: 28rem;
-}
-
-.home-img{
-    height: 20rem;
-    width: 20rem;
-    position: absolute;
-    top: 10px;
-    margin-top: 25rem;
-    right: 110px;
-    z-index: 0;
-}
-
-.shape{
-    background-color: var(--main-color);
-    width: 15rem;
-    height: auto 20%;
-    margin-left: 70px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 0;
-}
-
-.home-GreenTea{
-    position: absolute;
-    bottom: 15rem;
-    left: -15px;
-    z-index: 0;
-    width: 60px;
-    height: 60px;
-}
-
-.home-text h1{
-    font-size: 3.4rem;
-    color: var(--main-color);
-    text-transform: uppercase;
-}
-
-.home-text span{
-    font-size: 3.4rem;
-    color: var(--button-color);
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-.home-text p{
-    font-size: 0.938rem;
-    color: black;
-    margin: 1rem 0 1rem;
-    font-family: inter;
-    max-width: calc(18rem - 20px);
-    margin-right: 10px; 
-    text-align: justify;
-}
-
-.spill {
-    grid-template-columns: repeat(auto-fit, minmax(50%, auto));
- }
+@media screen and (max-width: 992px) and (min-width:768px) {
 }
