--- a/Home/HomeStyle.css
+++ b/Home/HomeStyle.css
@@ -235,7 +235,7 @@ header {
   
   .item1 {
     grid-row: 3 / 1;
-    background-image: url(/Asset/originTea.svg);
+    background-image: url(/Asset/originTea.png);
     background-size: cover;
   }
 
