--- a/History/historystyle.css
+++ b/History/historystyle.css
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6 {
     --main-color:#4A6409;
     --button-color:#D0862D;
     --second-color:#96AD39;
-    --bg-color:#Fffff;
+    --bg-color:#FFFFFF;
 }
 
 section{
