--- a/About Us/AboutUsStyle.css
+++ b/About Us/AboutUsStyle.css
@@ -288,9 +288,11 @@ header{
     color: var(--second-color);
     letter-spacing: 2px;
 }
+
 span{
     color: var(--button-color);
 }
+
 .numberganjil{
     color: var(--button-color);
     font-size: 2rem;
@@ -431,100 +433,164 @@ span{
     background-color: var(--button-color);
 }
 
- /* Footer Styling */
-/* Footer */
+/* FOOTER */
+footer {
+    position: fixed;
+    bottom: 0;
+}
 
-.bg-fo{
+.footer {
     background-color: var(--main-color);
-    background-size: cover;
-    height: 20rem;
-    margin-top: 9rem;
-    position: relative;
+    box-sizing: border-box;
+    width: 100%;
+    text-align: left;
+    padding: 50px 50px 30px 50px;
+    margin-top: 80px;
 }
 
-.bg-fo img{
-    width: 10rem;
-    height: 10rem;
-    margin-top: 4rem;
-    margin-bottom: 5.5rem;
-    margin-left: 6rem;
+.footer .footer-left,
+.footer .footer-center,
+.footer .footer-right {
+    display: inline-block;
+    vertical-align: top;
 }
 
-  /* element-fo */
-
-.element-fo {
-    position: absolute;
-    top: 5%;
-    right: 10%; 
-    width: 15rem;
-    height: 15rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.alamat img,
-.email img,
-.call img {
-    width: 1.5rem;
-    height: 1.5rem;
-    margin-right: 0.5rem;
-    margin-bottom: 5.6rem;
-}
-
-.alamat,
-.call,
-.email {
-    display: flex;
-    align-items: center; /* Vertically center the elements */
-    margin-bottom: -7.5rem;
-}
-
-.alamat h5,
-.call h5,
-.email h5{
-    margin-left: 0.5rem;
-    margin-top: -1.5rem;
-    color: #FFFFFF;
-    font-size: 10px;
-    font-family: 'inter';
-    margin-left: 0.5rem;
-    font-weight: normal;
-}
-
-
-  /* Navbar bawah */
-
+/* Navbar bawah */
 .line{
     background-color: #FFFFFF;
     height: 1px;
     width: 75rem;
-    margin: -2.3rem auto 0;
+    margin-top: 35px;
 }
 
-.navbar-bawah {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    list-style: none;
-    margin: 10px 0 0;
-    padding: 0;
-    flex-grow: 2; 
-    margin-left: 20rem;
-}
-
-.navbar-bawah a {
-    padding: 8px 15px;
+/* copyright */
+#copyright {
+    text-align: center;
+    width: 100%;
+    padding: 30px 0px 0px 0px;
     color: var(--bg-color);
-    font-size: 15px;
-    font-family: 'inter';
-    margin: 0 1.5rem;
-    font-weight: 300;
 }
 
-.navbar-bawah a:hover{
-    color: #e9ff8f;
+@media (max-height:800px) {
+    footer {
+        position: static;
+    }
+
+    header {
+        padding-top: 40px;
+    }
 }
+
+.footer .footer-left {
+    width: 30%;
+}
+
+.footer .footer-left img {
+    width: 45%;
+    vertical-align: middle;
+}
+
+.footer .footer-media {
+    margin-top: 25px;
+}
+
+.footer .footer-media a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 50px;
+    margin-right: 3px;
+    margin-bottom: 5px;
+}
+
+.footer .footer-media img {
+    color: #FFFFFF;
+    width: 30px;
+    height: 30px;
+    padding-bottom: 5px;
+}
+
+.footer .footer-media a:hover {
+    background-color: var(--button-color);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.footer .footer-left .credit-cards {
+    width: 100%;
+}
+
+.footer .footer-center {
+    width: 35%;
+}
+
+/* penambahan */
+.footer-center .location,
+.footer-center .phone,
+.footer-center .mail {
+    padding-bottom: 10px;
+}
+
+.footer .footer-center img {
+    height: 45px;
+    width: 45px;
+    vertical-align: middle;
+    padding-right: 3%;
+}
+
+.footer .footer-center p {
+    display: inline-block;
+    color: #ffffff;
+    vertical-align: middle;
+    margin: 0px;
+}
+
+.footer .footer-center p span {
+    display: block;
+    color: var(--bg-color);
+    /* font-weight: normal; */
+    font-size: 14px;
+    line-height: 2;
+}
+
+.footer .footer-center p a {
+    color: var(--bg-color);
+    text-decoration: none;
+}
+
+.footer .footer-right {
+    width: 30%;
+}
+
+.footer .footer-about {
+    line-height: 20px;
+    color: var(--bg-color);
+    font-size: 13px;
+    font-weight: normal;
+    margin: 0px;
+}
+
+.footer .footer-about span {
+    display: block;
+    color: #ffffff;
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+@media (max-width: 880px) {
+    
+    .footer .footer-left,
+    .footer .footer-center,
+    .footer .footer-right {
+        display: block;
+        width: 100%;
+        margin-bottom: 40px;
+        text-align: left;
+    }
+}
+
    /* Footer Styling */
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 768px) {
