--- a/Product/ProductStyle.css
+++ b/Product/ProductStyle.css
@@ -53,16 +53,16 @@ header{
 
 .navbar {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     list-style: none;
     margin: 0;
     padding: 0;
-    flex-grow: 1; 
+    flex-grow: 1;
 }
 
 .navbar a {
-    padding: 8px 15px;
+    padding: 8px 20px;
     color: var(--second-color);
     font-size: 1rem;
     text-transform: uppercase;
@@ -70,33 +70,48 @@ header{
     font-family: 'inter', sans-serif;
     font-weight: bold;
     margin: 0 10px;
+    position: relative;
 }
 
 .navbar a:hover {
-    background: var(--main-color);
-    color: #FFFF;
-    border-radius: 0.2rem;
-    transition: 0.2s all linear; /* Add "s" to specify seconds */
+    transition: 0.2s all linear;
+    border-bottom: 2px solid var(--button-color);
+    color: var(--button-color);
+    padding: 0;
+    margin: 0;
 }
 
-.active_nav{
-    background: var(--main-color);
-    color: #FFFF;
-    border-radius: 0.2rem;
-    transition: 0.2 all linear;
+.navbar a:hover,
+.active_nav {
+    transition: 0.2s all linear;
     background-size: auto;
-
+    border-bottom: 2px solid var(--button-color);
     font-size: 1rem;
     text-transform: uppercase;
     font-weight: 500;
     font-family: 'inter', sans-serif;
-    font-weight: bold; 
-    padding: 8px 2px;
+    font-weight: bold;
+    padding: 8px;
+    margin: 0 2rem;
 }
 
-.active_nav a{
-    color: #ffffff;
+.active_nav a {
+    color: var(--button-color);
+    position: relative;
+    margin: 0;
+    padding: 0;
+    background-size: auto;
 }
+
+/* .active_nav a:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -5rem;
+    height: 2px;
+    background-color: var(--button-color);
+} */
 
 #menu-icon {
     color: var(--second-color);
@@ -166,6 +181,7 @@ header{
     display: flex; 
     gap: 7px;  
     float: right;
+    /* background-color: #000000; */
 }
 
 .column{
